WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315433
Can no longer "Close and return to ..." after opening a new window in Safari
https://bugs.webkit.org/show_bug.cgi?id=315433
Summary
Can no longer "Close and return to ..." after opening a new window in Safari
Brady Eidson
Reported
2026-05-23 14:55:43 PDT
Can no longer "Close and return to ..." after opening a new window in Safari
Attachments
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2026-05-23 14:55:44 PDT
<
rdar://problem/177655022
>
Brady Eidson
Comment 2
2026-05-23 15:02:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65543
EWS
Comment 3
2026-05-23 20:11:50 PDT
Committed
313800@main
(96d6f336d4e2): <
https://commits.webkit.org/313800@main
> Reviewed commits have been landed. Closing PR #65543 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug